test/error/parse/ExpectBrace1Open.mod
MODULE ExpectBrace1Open;
PROCEDURE P);
END P;
END ExpectBrace1Open.
